[package]
name = "serverwitch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-channel = "0.3.30"
futures-timer = "3.0.2"
futures-util = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
ratatui = { version = "0.25.0"}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
simple-logging = "2.0.2"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "rustls-native-certs", "rustls-tls-webpki-roots"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
